--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
  <a href="https://www.princetonreview.com/quiz/career-quiz">Take a career quiz here</a>
 	
 	<article> 
-	If you're struggling with starting your journey to adulthood, setting goals is a great place to start! </article>
+	If you're struggling with starting your journey to adulthood, setting goals is a great place to start!
+	</article>
 	<section>
 		<a href="https://www.indeed.com/career-advice/career-development/educational-goals-examples">Get goal ideas here</a> 
 	</section> 
@@ -71,7 +72,6 @@ body {
 		float: left;
 		margin-left: 11em;	
 		margin-top: 2em;
-		
 		}
 	
 	div {
