--- a/index.html
+++ b/index.html
@@ -16,11 +16,8 @@
  <a href="https://www.princetonreview.com/quiz/career-quiz">Take a career quiz here</a>
 	
 	<article> 
-	If you're struggling with starting your journey to adulthood, setting goals is a great place to start!
-	</article>
-	<section>
-		<a href="https://www.indeed.com/career-advice/career-development/educational-goals-examples">Get goal ideas here</a> 
-	</section> 
+	If you're struggling with starting your journey to adulthood, setting goals is a great place to start! </article>
+	<section> <a href="https://www.indeed.com/career-advice/career-development/educational-goals-examples">Get goal ideas here</a></section> 
 	<div> Taking time for yourself is very important. Within this time, you can learn more about yourself and set realistic goals. </div>
 	<a href="https://raisingteenstoday.com/12-simple-ways-hit-reset-button-life/">Learn about "Resetting" here</a>
 <style> 
@@ -40,7 +37,6 @@ body {
   text-align: center;
   background: #F8EFE8;
   font-size: 30px;
-	margin-top: 5em;
 }
 	img {
 		width: 300px;
@@ -66,13 +62,14 @@ body {
 		background: #EDECB8;
 		float: right;
 	font-size: 25px;
-		margin-top: 5em;
+		margin-top: 2em;
 		margin-right: 11em;
 	}
 	section {
 		float: left;
-		margin-left: 11em;	
-		margin-top: 5em;
+		margin-left: 23em;	
+		margin-top: -11em;
+		
 		}
 	
 	div {
@@ -81,8 +78,8 @@ body {
 		float: left;
 		margin-left: 11em;
 		font-size: 25px;
-		margin-top: 200em;
+		margin-top: 2em;
 	}
-	
 	</style>
 </html>
+
