--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 	
 	<article> 
 	If you're struggling with starting your journey to adulthood, setting goals is a great place to start! </article>
-	<section> <a href="https://www.indeed.com/career-advice/career-development/educational-goals-examples">Get goal ideas here</a></section> 
+	<span> <a href="https://www.indeed.com/career-advice/career-development/educational-goals-examples">Get goal ideas here</a></span> 
 	<div> Taking time for yourself is very important. Within this time, you can learn more about yourself and set realistic goals. </div>
 	<a href="https://raisingteenstoday.com/12-simple-ways-hit-reset-button-life/">Learn about "Resetting" here</a>
 <style> 
@@ -66,7 +66,7 @@ margin-top: 5em;
 		margin-top: 2em;
 		margin-right: 11em;
 	}
-	section {
+	span {
 		float: left;
 		margin-left: 23em;	
 		margin-top: -11em;
