--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 	
 	<article> 
 	If you're struggling with starting your journey to adulthood, setting goals is a great place to start! </article>
-	<span> <a href="https://www.indeed.com/career-advice/career-development/educational-goals-examples">Get goal ideas here</a></span> 
+	<section> <a href="https://www.indeed.com/career-advice/career-development/educational-goals-examples">Get goal ideas here</a></section> 
 	<div> Taking time for yourself is very important. Within this time, you can learn more about yourself and set realistic goals. </div>
 	<a href="https://raisingteenstoday.com/12-simple-ways-hit-reset-button-life/">Learn about "Resetting" here</a>
 <style> 
@@ -37,7 +37,6 @@ body {
   text-align: center;
   background: #F8EFE8;
   font-size: 30px;
-margin-top: 5em;
 }
 	img {
 		width: 300px;
@@ -66,11 +65,12 @@ margin-top: 5em;
 		margin-top: 2em;
 		margin-right: 11em;
 	}
-	span {
+	section {
 		float: left;
-		margin-left: 13em;
-		margin-top: -10em;
-	}
+		margin-left: 23em;	
+		margin-top: -11em;
+		
+		}
 	
 	div {
 		width: 300px;
@@ -82,5 +82,6 @@ margin-top: 5em;
 	}
 	</style>
 </html>
+
 
 
