--- a/index.html
+++ b/index.html
@@ -4,23 +4,23 @@
 <title>LAB 11 RESOURCES PAGE HTML</title>
 </head>
 <body> <nav> Home Learn Resources Products</nav>
-<--! making the title --> <main> Resources.
+<!-- making the title --> <main> Resources.
 </main>
-<--! inserts an image from the web --> <img src="file:///C|/Users/mjen9348/Documents/Downloads/Teens throwing graduation caps_Goals and Success.jpg" width="4999" height="2206" alt=""/>
+<!-- inserts an image from the web --> <img src="file:///C|/Users/mjen9348/Documents/Downloads/Teens throwing graduation caps_Goals and Success.jpg" width="4999" height="2206" alt=""/>
 </body>
 	
-	<p> <--! starting a paragraph -->
+	<p> <!-- starting a paragraph -->
 	As previously mentioned, finding a career can be one of the most stressful parts of adulting. Although, there are resources to help you out!
 	</p>
 	
- <a href="https://www.princetonreview.com/quiz/career-quiz">Take a career quiz here</a> <--! inserting a link -->
-	<--! making another text section -->
+ <a href="https://www.princetonreview.com/quiz/career-quiz">Take a career quiz here</a> <!-- inserting a link -->
+	<!-- making another text section -->
 	<article> 
 	If you're struggling with starting your journey to adulthood, setting goals is a great place to start! </article>
 	<section> <a href="https://www.indeed.com/career-advice/career-development/educational-goals-examples">Get goal ideas here</a></section> 
 	<div> Taking time for yourself is very important. Within this time, you can learn more about yourself and set realistic goals. </div>
 	<a href="https://raisingteenstoday.com/12-simple-ways-hit-reset-button-life/">Learn about "Resetting" here</a>
-<--! internal styling -->
+<!-- internal styling -->
 	<style> 
 	main {
   background: #BBADFD;
