--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@ body {
 	}
 	a {
 		background: #B8EDCD;
-		margin-top: 5em;
-		float: right;
+		margin-top: 10em;
+		float: left;
 		margin-right: 15em;
 		font-size: 23px;		
 	}
