--- a/index.html
+++ b/index.html
@@ -1,28 +1,62 @@
 <html>
+	
 <head>
+	
 <meta charset="utf-8">
-<title>LAB 11 RESOURCES PAGE HTML</title>
+	
+<title>
+	LAB 11 RESOURCES PAGE HTML
+</title>
+	
 </head>
-<body> <nav> Home Learn Resources Products</nav>
-<!-- making the title --> <main> Resources.
+	
+<body>
+
+<nav> 
+		Home Learn Resources Products
+</nav>
+
+	<!-- making the title --> 
+<main>
+	Resources.
 </main>
-<!-- inserts an image from the web --> <img src="file:///C|/Users/mjen9348/Documents/Downloads/Teens throwing graduation caps_Goals and Success.jpg" width="4999" height="2206" alt=""/>
+	
+<!-- inserts an image from the web --> 
+	
+	<img src="file:///C|/Users/mjen9348/Documents/Downloads/Teens throwing graduation caps_Goals and Success.jpg" width="4999" height="2206" alt=""/>
+
 </body>
 	
-	<p> <!-- starting a paragraph -->
-	As previously mentioned, finding a career can be one of the most stressful parts of adulting. Although, there are resources to help you out!
-	</p>
+<p> 
+	<!-- starting a paragraph -->
 	
- <a href="https://www.princetonreview.com/quiz/career-quiz">Take a career quiz here</a> <!-- inserting a link -->
+	As previously mentioned, finding a career can be one of the most stressful parts of adulting. Although, there are resources to help you out!
+</p>
+	
+ <a href="https://www.princetonreview.com/quiz/career-quiz">Take a career quiz here</a> 
+	
+	<!-- inserting a link -->
+	
 	<!-- making another text section -->
-	<article> 
-	If you're struggling with starting your journey to adulthood, setting goals is a great place to start! </article>
-	<section> <a href="https://www.indeed.com/career-advice/career-development/educational-goals-examples">Get goal ideas here</a></section> 
-	<div> Taking time for yourself is very important. Within this time, you can learn more about yourself and set realistic goals. </div>
+	
+<article> 
+	If you're struggling with starting your journey to adulthood, setting goals is a great place to start! 
+</article>
+	
+<section> 
+		<a href="https://www.indeed.com/career-advice/career-development/educational-goals-examples">Get goal ideas here</a>
+</section> 
+	
+<div> 
+		Taking time for yourself is very important. Within this time, you can learn more about yourself and set realistic goals.
+</div>
 	<a href="https://raisingteenstoday.com/12-simple-ways-hit-reset-button-life/">Learn about "Resetting" here</a>
+	
 <!-- internal styling -->
-	<style> 
-	main {
+	
+<style> 
+	
+main {
   background: #BBADFD;
   font-size: 40px;
   padding: 3rem;
@@ -30,56 +64,63 @@
   text-align: center;
   margin: 1em auto;
 }
+	
 nav {
   background: #D1B0B0;
   padding: 1.5rem;
 }
+	
 body {
   text-align: center;
   background: #F8EFE8;
   font-size: 30px;
 }
-	img {
-		width: 300px;
-		height: 110px;
-	}
-	p {
-		width: 300px;
-		background: #EDECB8;
-		float: left;
-		margin-left: 11em;
-		font-size: 25px;
-		margin-top: 11em;
-
-	}
-	a {
-		background: #B8EDCD;
-		margin-top: 10em;
-		float: left;
-		margin-right: 15em;
-		font-size: 23px;		
-	}
-	article {
-		width: 300px;
-		background: #EDECB8;
-		float: right;
-	font-size: 25px;
-		margin-top: 2em;
-		margin-right: 11em;
-	}
-	section {
-		float: left;
-		margin-left: 11em;	
-		margin-top: -11em;
-		}
 	
-	div {
-		width: 300px;
-		background: #EDECB8;
-		float: left;
-		margin-left: 11em;
-		font-size: 25px;
-		margin-top: 2em;
-	}
-	</style>
+img {
+   width: 300px;
+   height: 110px;
+}
+	
+p {
+   width: 300px;
+   background: #EDECB8;
+   float: left;
+   margin-left: 11em;
+   font-size: 25px;
+   margin-top: 11em;
+}
+	
+a {
+   background: #B8EDCD;
+   margin-top: 10em;
+   float: left;
+   margin-right: 15em;
+   font-size: 23px;		
+}
+	
+article {
+   width: 300px;
+   background: #EDECB8;
+   float: right;   
+   font-size: 25px;
+   margin-top: 2em;
+   margin-right: 11em;
+}
+	
+section {
+   float: left;
+   margin-left: 11em;	
+   margin-top: -11em;
+}
+	
+div {
+   width: 300px;
+   background: #EDECB8;
+   float: left;
+   margin-left: 11em;
+   font-size: 25px;
+   margin-top: 2em;
+}
+	
+</style>
 </html>
